[package]
name = "alpenglow-pool"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
solana-bls-signatures = "3.3.0"
solana-hash = { version = "4.3.0", features = ["serde", "copy", "decode", "wincode", "atomic"]  }
solana-pubkey = "4.2.0"
wincode = { version = "0.5.4", features = ["derive"] }
